--- a/test-02/register/clusters/03-ClusterTemplate-block-unregister.yaml
+++ b/test-02/register/clusters/03-ClusterTemplate-block-unregister.yaml
@@ -1,16 +1,14 @@
 apiVersion: carto.run/v1alpha1
 kind: ClusterTemplate
 metadata:
-  name: mock-cluster-unregister
+  name: mock-block-unregister
 spec:
-  healthRule:
-    singleConditionType: Success
   lifecycle: tekton
   template:
     apiVersion: tekton.dev/v1
     kind: PipelineRun
     metadata:
-      generateName: $(workload.metadata.name)$-off-
+      generateName: $(workload.metadata.name)$-block-unregister-
     spec:
       params:
       - name: provider_id
@@ -21,20 +19,16 @@ spec:
         value: $(workload.spec.params[3].value)$
       - name: block_num
         value: "$(workload.spec.params[4].value)$"
-      - name: cluster_num
-        value: "$(workload.spec.params[5].value)$"
       - name: task_name
-        value: $(workload.spec.params[7].value)$
+        value: $(workload.spec.params[13].value)$
       - name: xterm_user
         value: $(workload.spec.params[8].value)$
       - name: iam_group_list
         value: $(workload.spec.params[9].value)$
-      - name: delivery_group
-        value: $(workload.spec.params[10].value)$
       - name: fake
-        value: $(sources.source.url)$ # This value force the waitting, even when is not used.
+        value: $(sources.mock-cluster-unregister.url)$ # This value force the waitting, even when is not used.
       pipelineRef:
-        name: $(workload.spec.params[7].value)$
+        name: $(workload.spec.params[13].value)$
       taskRunTemplate:
         serviceAccountName: $(workload.spec.params[11].value)$
       workspaces:
