--- a/run/register/clusters/02-ClusterSourceTemplate-cluster-unregister.yaml
+++ b/run/register/clusters/02-ClusterSourceTemplate-cluster-unregister.yaml
@@ -1,29 +1,20 @@
 apiVersion: carto.run/v1alpha1
 kind: ClusterSourceTemplate
 metadata:
-  name: mock-cluster-register
+  name: mock-cluster-unregister
 spec:
-  
-  # urlPath and revisionPath, are fixed values that the ClusterSourceTemplate
-  # output. This must be populated with something in order to be consumed by the next
-  # step in the supplyChain, even if the next step does not do anything with it.
-  
-  # urlPath: status.conditions[?(@.reason=="Succeeded")].status
-  # revisionPath: status.conditions[?(@.reason=="Succeeded")].status
-  urlPath: status.pipelineSpec.tasks[9].params[8].value
-  revisionPath: status.pipelineSpec.tasks[9].params[1].value
   lifecycle: tekton
+  urlPath: status.pipelineSpec.tasks[10].params[0].value
+  revisionPath: status.pipelineSpec.tasks[10].params[1].value
   template:
     apiVersion: tekton.dev/v1
     kind: PipelineRun
     metadata:
-      generateName: $(workload.metadata.name)$-register-
+      generateName: $(workload.metadata.name)$-unregister-
     spec:
       params:
       - name: provider_id
         value: $(workload.spec.params[0].value)$
-      - name: cluster_type
-        value: $(workload.spec.params[1].value)$
       - name: account_id
         value: $(workload.spec.params[2].value)$
       - name: tenant_id
@@ -33,15 +24,17 @@ spec:
       - name: cluster_num
         value: "$(workload.spec.params[5].value)$"
       - name: task_name
-        value: $(workload.spec.params[6].value)$
+        value: $(workload.spec.params[7].value)$
       - name: xterm_user
         value: $(workload.spec.params[8].value)$
       - name: iam_group_list
-        value: $(workload.spec.params[9].value)$
+        value: $(workload.spec.params[8].value)$
       - name: delivery_group
-        value: $(workload.spec.params[10].value)$
+        value: $(workload.spec.params[9].value)$
+      - name: fake
+        value: $(sources.mock-cluster-register.url)$ # This value force the waitting, even when is not used.
       pipelineRef:
-        name: $(workload.spec.params[6].value)$
+        name: $(workload.spec.params[7].value)$
       taskRunTemplate:
         serviceAccountName: $(workload.spec.params[11].value)$
       workspaces:
